--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <h1>zawartość fruktozy w owocach (w 100g)</h1>
-        <h4>ⓘ użyj liczby pojedyńczej, np. zamiast "gruszki" ➔ "gruszka"</h4>
+        <h4>ⓘ użyj liczby pojedynczej, np. zamiast "gruszki" ➔ "gruszka"</h4>
         <input type="text" id="fruitInput" placeholder="nazwa owocu">
         <button onclick="checkFructose()">sprawdź</button>
         <p id="result"></p>
